@@ -1,17 +1,22 @@
 package com.d102.file.controller;
 
-import com.d102.common.constant.DownloadConstant;
-import com.d102.common.response.Response;
 import com.d102.file.controller.docs.DownloadControllerDocs;
 import com.d102.file.dto.DownloadDto;
 import com.d102.file.service.DownloadService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.core.io.ByteArrayResource;
-import org.springframework.http.MediaType;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.security.web.util.UrlUtils;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
 
-import java.nio.file.Paths;
+import java.net.URLDecoder;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Path;
 
 @RequestMapping("/download")
 @RequiredArgsConstructor
@@ -21,11 +26,23 @@ public class DownloadController implements DownloadControllerDocs {
     private final DownloadService downloadService;
 
     @GetMapping(value = "/profile")
-    public ResponseEntity<ByteArrayResource> downloadProfile(@RequestParam("url") String profileUrl) {
-        DownloadDto.ProfileResponse profileResponseDto = downloadService.downloadProfile(Paths.get(profileUrl));
+    public ResponseEntity<ByteArrayResource> downloadProfile(@RequestParam(value = "path") String profilePath) {
+        String decodedPath = URLDecoder.decode(profilePath, StandardCharsets.UTF_8);
+        DownloadDto.ProfileResponse profileResponseDto = downloadService.downloadProfile(Path.of(decodedPath));
         return ResponseEntity.ok()
-                .contentType(profileResponseDto.getProfileType())
+                .header(HttpHeaders.CONTENT_TYPE, profileResponseDto.getProfileType())
                 .body(new ByteArrayResource(profileResponseDto.getProfile()));
+    }
+
+    // download pdf file
+    @GetMapping(value = "/resume")
+    public ResponseEntity<ByteArrayResource> downloadResume(@RequestParam("id") Long resumeId) {
+        DownloadDto.ResumeResponse resumeResponseDto = downloadService.downloadResume(resumeId);
+        return ResponseEntity.ok()
+                .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=" + URLEncoder.encode(resumeResponseDto.getName(), StandardCharsets.UTF_8))
+                .header(HttpHeaders.CONTENT_LENGTH, resumeResponseDto.getLength())
+                .header(HttpHeaders.CONTENT_TYPE, resumeResponseDto.getResumeType())
+                .body(new ByteArrayResource(resumeResponseDto.getResume()));
     }
 
 }
